--- a/tipovacka-app/src/app/pages/admin/admin.component.html
+++ b/tipovacka-app/src/app/pages/admin/admin.component.html
@@ -1,6 +1,27 @@
+<div class="grid grid-cols-1 gap-y-8">
+  <div
+    *ngFor="let match of matches"
+    class="flex"
+  >
+    <div class="grid grid-cols-2 w-full">
+      <div>{{match.round}}. kolo</div>
+      <div>{{match.home}}</div>
+      <div>{{match.datetime | date: "d.M. 'v' H:mm" : undefined : 'cs'}}</div>
+      <div>{{match.away}}</div>
+    </div>
+    <div>
+      <button>
+        <span
+          (click)="deleteMatch(match.id)"
+          class="material-icons md-36 text-red-600">delete</span>
+      </button>
+    </div>
+  </div>
+</div>
+
 <div
   [formGroup]="newMatchFormGroup"
-  class="grid grid-cols-2">
+  class="grid grid-cols-2 mt-20">
   <input
     formControlName="round"
     type="number">
