--- a/tipovacka-app/src/app/app.component.html
+++ b/tipovacka-app/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container mx-auto px-4 grid grid-cols-1">
+<div class="container mx-auto px-4 pb-4 grid grid-cols-1">
   <app-header></app-header>
   <router-outlet/>
 </div>
