--- a/tipovacka-app/src/app/components/match/match.component.html
+++ b/tipovacka-app/src/app/components/match/match.component.html
@@ -1,7 +1,7 @@
 <div class="w-full grid grid-cols-3 gap-4 content-start">
   <button
     (click)="chooseResult(1)"
-    [disabled]="data?.result !== null || data?.vote === 1"
+    [disabled]="data?.datetime! < now"
     class="flex justify-center"
   >
     <app-result-button
@@ -34,7 +34,7 @@
   </button>
   <button
     (click)="chooseResult(0)"
-    [disabled]="data?.result !== null || data?.vote === 0"
+    [disabled]="data?.datetime! < now"
     class="flex justify-center"
   >
     <app-result-button
@@ -70,7 +70,7 @@
   </button>
   <button
     (click)="chooseResult(2)"
-    [disabled]="data?.result !== null || data?.vote === 2"
+    [disabled]="data?.datetime! < now"
     class="flex justify-center"
   >
     <app-result-button
