--- a/tipovacka-app/src/app/pages/dashboard/standings/standings.component.html
+++ b/tipovacka-app/src/app/pages/dashboard/standings/standings.component.html
@@ -1,45 +1,31 @@
-<div class="relative overflow-x-auto sm:rounded-lg mt-8 w-full">
-  <table class="w-full text-left text-gray-700">
-    <thead class="text-xs text-gray-500 bg-gray-50">
-    <tr>
-      <th
-        class="px-6 py-3"
-        scope="col">
-        Jméno
-      </th>
-      <th
-        class="px-6 py-3 text-right"
-        scope="col">
-        Body
-      </th>
-      <th
-        class="px-6 py-3 text-right"
-        scope="col">
-        Úspěšnost
-      </th>
-    </tr>
-    </thead>
-    <tbody>
+<div class="relative overflow-x-auto sm:rounded-lg mt-8 w-full text-sm">
+  <div class="w-full flex justify-end">
+    <button
+      (click)="toggleSort()"
+      class="btn btn-secondary">
+      <span class="material-icons md-18">sort</span>
+      {{sortBy === 'correctVotes' ? 'Úspěšné tipy' : 'Úspěšnost'}}
+    </button>
+  </div>
+  <table class="w-full">
     <tr
-      *ngFor="let user of users | sortBy: 'correctVotes': 'desc'"
-      class="bg-white border-b even:bg-gray-50">
-      <td class="px-6 py-4 text-sm">
-        {{user.name}}
-      </td>
-      <td class="px-6 py-4 text-right text-gray-950 font-bold">
-        {{user.correctVotes}}
-      </td>
-      <td
-        [ngClass]="{
-          'text-red-400': user.correctVotes / user.totalVotes < 0.34,
-          'text-orange-400': user.correctVotes / user.totalVotes > 0.34 && user.correctVotes / user.totalVotes < 0.67,
-          'text-green-400': user.correctVotes / user.totalVotes > 0.66,
-        }"
-        class="px-6 py-4 text-right"
-      >
-        {{(user.correctVotes / user.totalVotes * 100) | number: '1.1-1':'cs-CZ'}}%
+      *ngFor="let user of users | sortBy: sortBy: 'desc'; let i = index"
+      class="border-gray-200 border-b-[1px] last:border-b-0">
+      <td class="text-gray-700 text-right">{{i + 1}}.</td>
+      <td class="w-full">{{user.name}}</td>
+      <td class="font-bold text-right">{{user.correctVotes}}</td>
+      <td>
+        <span
+          [ngClass]="{
+            'bg-red-100 text-red-800': user.correctVotes / user.totalVotes < 0.34,
+            'bg-orange-100 text-orange-800': user.correctVotes / user.totalVotes > 0.33 && user.correctVotes / user.totalVotes < 0.67,
+            'bg-green-100 text-green-800': user.correctVotes / user.totalVotes > 0.66
+          }"
+          class="text-xs font-medium mr-2 px-2.5 py-0.5 rounded"
+        >
+          {{(user.correctRatio * 100) | number: '1.1-1':'cs-CZ'}}%
+        </span>
       </td>
     </tr>
-    </tbody>
   </table>
 </div>
