--- a/tipovacka-app/src/app/pages/dashboard/next-matches/next-matches.component.html
+++ b/tipovacka-app/src/app/pages/dashboard/next-matches/next-matches.component.html
@@ -1,4 +1,6 @@
-<div class="grid grid-cols-1 w-full gap-y-20 mt-8">
+<div
+  *ngIf="!loading"
+  class="grid grid-cols-1 w-full gap-y-20 mt-8">
   <div
     *ngFor="let group of groupOfNextMatches"
     class="grid grid-cols-1 w-full gap-y-8"
@@ -20,5 +22,19 @@
       *ngFor="let match of group"
       [data]="match"
     />
+  </div>
+</div>
+
+<div
+  *ngIf="loading"
+  class="grid grid-cols-1 w-full gap-y-20 mt-8 animate-pulse"
+>
+  <div class="grid grid-cols-1 w-full gap-y-8">
+    <div class="mb-2 w-1/3 h-4 bg-gray-100 justify-self-center"></div>
+    <app-match-skeleton/>
+    <app-match-skeleton/>
+    <app-match-skeleton/>
+    <app-match-skeleton/>
+    <app-match-skeleton/>
   </div>
 </div>
