--- a/tipovacka-app/src/app/pages/dashboard/previous-matches/previous-matches.component.html
+++ b/tipovacka-app/src/app/pages/dashboard/previous-matches/previous-matches.component.html
@@ -1,4 +1,6 @@
-<div class="grid grid-cols-1 w-full gap-y-8 mt-8">
+<div
+  *ngIf="!loading"
+  class="grid grid-cols-1 w-full gap-y-8 mt-8">
   <div
     *ngFor="let group of groupOfPrevMatches"
     class="grid grid-cols-1 w-full gap-y-2"
@@ -21,5 +23,19 @@
       </div>
       <app-match [data]="match"/>
     </div>
+  </div>
+</div>
+
+<div
+  *ngIf="loading"
+  class="grid grid-cols-1 w-full gap-y-8 mt-8 animate-pulse"
+>
+  <div class="grid grid-cols-1 w-full gap-y-2">
+    <div class="mb-2 w-1/3 h-4 bg-gray-100 justify-self-center"></div>
+    <app-match-skeleton [small]="true"/>
+    <app-match-skeleton [small]="true"/>
+    <app-match-skeleton [small]="true"/>
+    <app-match-skeleton [small]="true"/>
+    <app-match-skeleton [small]="true"/>
   </div>
 </div>
