--- a/tipovacka-app/src/app/pages/dashboard/standings/standings.component.html
+++ b/tipovacka-app/src/app/pages/dashboard/standings/standings.component.html
@@ -7,7 +7,9 @@
       {{sortBy === 'correctVotes' ? 'Úspěšné tipy' : 'Úspěšnost'}}
     </button>
   </div>
-  <table class="w-full">
+  <table
+    *ngIf="!loading"
+    class="w-full">
     <tr
       *ngFor="let user of users | sortBy: sortBy: 'desc'; let i = index"
       class="border-gray-200 border-b-[1px] last:border-b-0">
@@ -28,4 +30,16 @@
       </td>
     </tr>
   </table>
+  <div
+    *ngIf="loading"
+    class="animate-pulse flex flex-col">
+    <div
+      *ngFor="let item of loadingArray"
+      class="border-gray-200 border-b-[1px] last:border-b-0 flex">
+      <div class="rounded bg-gray-200 my-4 mx-2 h-5 w-12"></div>
+      <div class="rounded bg-gray-200 my-4 mx-2 h-5 w-full"></div>
+      <div class="rounded bg-gray-200 my-4 mx-2 h-5 w-12"></div>
+      <div class="rounded bg-gray-200 my-4 mx-2 h-5 w-20"></div>
+    </div>
+  </div>
 </div>
