add logo, animation of sending and alert you need to be log in to send vote

--- a/tipovacka-app/src/app/components/header/header.component.html
+++ b/tipovacka-app/src/app/components/header/header.component.html
@@ -1,5 +1,12 @@
 <div class="flex p-4 mx-auto items-center justify-between">
-  <div routerLink="">Tipovačka</div>
+  <a routerLink="">
+    <img
+      alt="Tipovačka"
+      class="w-6 h-6"
+      src="/assets/icons/logo.png"
+      srcset="/assets/icons/logo.png"
+    >
+  </a>
   <div class="flex gap-2 items-center">
     <button
       (click)="goToAdmin()"
@@ -9,12 +16,21 @@
       <span class="material-icons">admin_panel_settings</span>
     </button>
     <div *ngIf="authService.isSignIn$ | async">
-      <img [src]="(authService.getUserData$ | async)?.photoURL" alt="Rounded avatar" class="w-8 h-8 rounded-full">
+      <img
+        [src]="(authService.getUserData$ | async)?.photoURL"
+        alt="Rounded avatar"
+        class="w-8 h-8 rounded-full">
     </div>
-    <button (click)="authService.signIn()" *ngIf="!(authService.isSignIn$ | async)" class="flex">
+    <button
+      (click)="authService.signIn()"
+      *ngIf="!(authService.isSignIn$ | async)"
+      class="flex">
       <span class="material-icons">login</span>
     </button>
-    <button (click)="authService.signOut()" *ngIf="authService.isSignIn$ | async" class="flex">
+    <button
+      (click)="authService.signOut()"
+      *ngIf="authService.isSignIn$ | async"
+      class="flex">
       <span class="material-icons">logout</span>
     </button>
   </div>
