--- a/tipovacka-app/src/app/components/result-button/result-button.component.html
+++ b/tipovacka-app/src/app/components/result-button/result-button.component.html
@@ -6,7 +6,8 @@
       'border-red-600': type === 'incorrect',
       'opacity-50': hide,
       'w-20 h-20': size === 'normal',
-      'w-14 h-14': size === 'small'
+      'w-14 h-14': size === 'small',
+      'animate-pulse': pulseAnimation
     }"
   class="rounded-full border-2 flex justify-center items-center p-2 transition-all"
 >
