--- a/tipovacka-app/src/app/pages/dashboard/previous-matches/previous-matches.component.html
+++ b/tipovacka-app/src/app/pages/dashboard/previous-matches/previous-matches.component.html
@@ -24,6 +24,12 @@
       <app-match [data]="match"/>
     </div>
   </div>
+  <div
+    *ngIf="!groupOfPrevMatches.length"
+    class="p-4 text-sm text-center text-gray-800 rounded-lg bg-gray-50"
+    role="alert">
+    Žádné zápasy v předchozích 14 dnech.
+  </div>
 </div>
 
 <div
