--- a/tipovacka-app/src/app/components/result-button/result-button.component.html
+++ b/tipovacka-app/src/app/components/result-button/result-button.component.html
@@ -19,7 +19,7 @@
   </div>
 </div>
 <div class="mt-2 text-xs text-gray-600">{{label}}</div>
-<div class="mt-1 w-full text-xs flex bg-gray-100 rounded">
+<div class="mt-1 w-full text-xxs flex bg-gray-100 rounded">
   <div
     [style.background-color]="backgroundColor"
     [style.width]="votesRatio*100+'%'"
