--- a/tipovacka-app/src/app/pages/dashboard/next-matches/next-matches.component.html
+++ b/tipovacka-app/src/app/pages/dashboard/next-matches/next-matches.component.html
@@ -7,31 +7,13 @@
 </div>
 <div
   *ngIf="!loading"
-  class="grid grid-cols-1 w-full gap-y-20 mt-8">
+  class="grid grid-cols-1 w-full gap-y-8 mt-8">
+  <app-matches-overview
+    [leagues]="leagues"
+    [matches]="nextMatches"
+  />
   <div
-    *ngFor="let group of groupOfNextMatches"
-    class="grid grid-cols-1 w-full gap-y-8"
-  >
-    <div class="flex gap-2 justify-center text-center mb-2 text-xs text-gray-500">
-      <div class="text-gray-950 font-medium">{{group[0].round}}. kolo</div>
-      <div>{{group[0].datetime | date: "d.M. 'v' H:mm" : undefined : 'cs'}}</div>
-      <div *ngIf="group[0].daysTill > 1">(za {{group[0].daysTill}} dny/ů)</div>
-      <div
-        *ngIf="group[0].daysTill === 1"
-        class="text-red-600 font-medium">ZÍTRA!
-      </div>
-      <div
-        *ngIf="group[0].daysTill === 0"
-        class="text-red-600 font-medium">DNES!
-      </div>
-    </div>
-    <app-match
-      *ngFor="let match of group"
-      [data]="match"
-    />
-  </div>
-  <div
-    *ngIf="!groupOfNextMatches.length"
+    *ngIf="!nextMatches.length"
     class="p-4 text-sm text-center text-gray-800 rounded-lg bg-gray-50"
     role="alert">
     Žádné zápasy v následujících 14 dnech.
@@ -40,8 +22,13 @@
 
 <div
   *ngIf="loading"
-  class="grid grid-cols-1 w-full gap-y-20 mt-8 animate-pulse"
+  class="grid grid-cols-1 w-full gap-y-8 mt-8 animate-pulse"
 >
+  <div class="flex">
+    <div class="w-20 h-5 badge bg-gray-100"></div>
+    <div class="w-20 h-5 badge bg-gray-100"></div>
+    <div class="w-20 h-5 badge bg-gray-100"></div>
+  </div>
   <div class="grid grid-cols-1 w-full gap-y-8">
     <div class="mb-2 w-1/3 h-4 bg-gray-100 justify-self-center"></div>
     <app-match-skeleton/>
