--- a/tipovacka-app/src/app/pages/dashboard/previous-matches/previous-matches.component.html
+++ b/tipovacka-app/src/app/pages/dashboard/previous-matches/previous-matches.component.html
@@ -1,31 +1,12 @@
 <div
   *ngIf="!loading"
   class="grid grid-cols-1 w-full gap-y-8 mt-8">
+  <app-matches-overview
+    [leagues]="leagues"
+    [matches]="prevMatches"
+  />
   <div
-    *ngFor="let group of groupOfPrevMatches"
-    class="grid grid-cols-1 w-full gap-y-2"
-  >
-    <div class="flex gap-2 justify-center text-center mb-2 text-xs text-gray-500">
-      <div class="text-gray-950">{{group[0].round}}. kolo</div>
-      <div>{{group[0].datetime | date: "d.M. 'v' H:mm" : undefined : 'cs'}}</div>
-      <div *ngIf="group[0].daysTill > 0">(za {{group[0].daysTill}} dnů/y)</div>
-    </div>
-    <div
-      *ngFor="let match of group"
-      class="relative">
-      <div
-        *ngIf="match?.result === null"
-        class="absolute w-full h-full bg-white/90 rounded flex items-center justify-center z-10"
-      >
-        <div class="py-1 px-2 bg-gray-700 text-white rounded italic font-light">
-          Čeká na zapsání výsledku
-        </div>
-      </div>
-      <app-match [data]="match"/>
-    </div>
-  </div>
-  <div
-    *ngIf="!groupOfPrevMatches.length"
+    *ngIf="!prevMatches.length"
     class="p-4 text-sm text-center text-gray-800 rounded-lg bg-gray-50"
     role="alert">
     Žádné zápasy v předchozích 14 dnech.
