--- a/tipovacka-app/src/app/pages/dashboard/previous-matches/previous-matches.component.html
+++ b/tipovacka-app/src/app/pages/dashboard/previous-matches/previous-matches.component.html
@@ -17,6 +17,11 @@
   *ngIf="loading"
   class="grid grid-cols-1 w-full gap-y-8 mt-8 animate-pulse"
 >
+  <div class="flex">
+    <div class="w-20 h-5 badge bg-gray-100"></div>
+    <div class="w-20 h-5 badge bg-gray-100"></div>
+    <div class="w-20 h-5 badge bg-gray-100"></div>
+  </div>
   <div class="grid grid-cols-1 w-full gap-y-2">
     <div class="mb-2 w-1/3 h-4 bg-gray-100 justify-self-center"></div>
     <app-match-skeleton [small]="true"/>
