--- a/tipovacka-app/src/app/pages/admin/admin.component.html
+++ b/tipovacka-app/src/app/pages/admin/admin.component.html
@@ -1,45 +1,3 @@
-<div class="grid grid-cols-1 gap-y-8">
-  <div
-    *ngFor="let match of matches"
-    class="flex"
-  >
-    <div class="grid grid-cols-2 w-full">
-      <div>{{match.league}}</div>
-      <div>{{match.stage}}</div>
-      <div>{{match.round}}</div>
-      <div>{{match.home}}</div>
-      <div>{{match.datetime | date: "d.M. 'v' H:mm" : undefined : 'cs'}}</div>
-      <div>{{match.away}}</div>
-    </div>
-    <div>
-      <select (change)="selectResult(match, $event)">
-        <option
-          [selected]="match.result === null"
-          [value]="null"></option>
-        <option
-          [selected]="match.result === 0"
-          [value]="0">0
-        </option>
-        <option
-          [selected]="match.result === 1"
-          [value]="1">1
-        </option>
-        <option
-          [selected]="match.result === 2"
-          [value]="2">2
-        </option>
-      </select>
-    </div>
-    <div>
-      <button>
-        <span
-          (click)="deleteMatch(match.id)"
-          class="material-icons md-36 text-red-600">delete</span>
-      </button>
-    </div>
-  </div>
-</div>
-
 <div
   [formGroup]="newMatchFormGroup"
   class="grid grid-cols-2 mt-20">
@@ -73,3 +31,67 @@
   </select>
 </div>
 <button (click)="addMatch()">Přidat</button>
+
+<div class="grid grid-cols-1 gap-y-8">
+  <div
+    *ngFor="let match of matches"
+    class="flex"
+  >
+    <div class="grid grid-cols-2 w-full">
+      <div>{{match.league}}</div>
+      <div>{{match.stage}}</div>
+      <div>{{match.round}}</div>
+      <div>{{match.home}}</div>
+      <div>
+        <input
+          (blur)="setDatetime(match, $event)"
+          [value]="match.datetime | adminDatetimeFormatBy"
+          type="datetime-local"
+        >
+      </div>
+      <div>{{match.away}}</div>
+    </div>
+    <div class="flex flex-col">
+      <div>Odloženo</div>
+      <select (change)="setPostponed(match, $event)">
+        <option
+          [selected]="!match.postponed"
+          [value]="false"
+        >NE
+        </option>
+        <option
+          [selected]="match.postponed"
+          [value]="true"
+        >ANO
+        </option>
+      </select>
+    </div>
+    <div class="flex flex-col">
+      <div>Výsledek</div>
+      <select (change)="selectResult(match, $event)">
+        <option
+          [selected]="match.result === null"
+          [value]="null"></option>
+        <option
+          [selected]="match.result === 0"
+          [value]="0">0
+        </option>
+        <option
+          [selected]="match.result === 1"
+          [value]="1">1
+        </option>
+        <option
+          [selected]="match.result === 2"
+          [value]="2">2
+        </option>
+      </select>
+    </div>
+    <div>
+      <button>
+        <span
+          (click)="deleteMatch(match.id)"
+          class="material-icons md-36 text-red-600">delete</span>
+      </button>
+    </div>
+  </div>
+</div>
