--- a/tipovacka-app/src/app/pages/dashboard/next-matches/next-matches.component.html
+++ b/tipovacka-app/src/app/pages/dashboard/next-matches/next-matches.component.html
@@ -7,7 +7,7 @@
 </div>
 <div
   *ngIf="!loading"
-  class="grid grid-cols-1 w-full gap-y-8 mt-8">
+  class="grid grid-cols-1 w-full gap-y-8">
   <app-matches-overview
     [leagues]="leagues"
     [matches]="nextMatches"
