--- a/tipovacka-app/src/app/pages/dashboard/dashboard.component.html
+++ b/tipovacka-app/src/app/pages/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="border-b border-gray-200">
+<div class="border-b border-gray-200 sticky top-0 bg-white">
   <ul class="flex flex-wrap -mb-px text-sm font-medium text-center text-gray-500">
     <li class="mr-2">
       <button
