--- a/tipovacka-app/src/app/pages/dashboard/previous-matches/previous-matches.component.html
+++ b/tipovacka-app/src/app/pages/dashboard/previous-matches/previous-matches.component.html
@@ -1,6 +1,6 @@
 <div
   *ngIf="!loading"
-  class="grid grid-cols-1 w-full gap-y-8 mt-8">
+  class="grid grid-cols-1 w-full gap-y-8">
   <app-matches-overview
     [leagues]="leagues"
     [matches]="prevMatches"
