--- a/tipovacka-app/src/app/components/create-user-league/create-user-league.component.html
+++ b/tipovacka-app/src/app/components/create-user-league/create-user-league.component.html
@@ -1,7 +1,7 @@
 <h1>{{ 'CREATE_USER_LEAGUE.TITLE' | transloco }}</h1>
 <div
   [formGroup]="formGroup"
-  class="grid grid-cols-2 py-8 gap-x-2 gap-y-4">
+  class="grid grid-cols-1 md:grid-cols-2 py-8 gap-x-2 gap-y-4">
   <div>
     <label
       class="input-label"
@@ -50,7 +50,7 @@
 </div>
 <div class="flex justify-between">
   <button
-    (click)="ref.close(true)"
+    (click)="ref.close()"
     class="btn btn-secondary">{{ 'CREATE_USER_LEAGUE.CANCEL_BUTTON' | transloco }}</button>
   <button
     (click)="submit()"
