--- a/tipovacka-app/src/app/pages/dashboard/dashboard.component.html
+++ b/tipovacka-app/src/app/pages/dashboard/dashboard.component.html
@@ -69,6 +69,7 @@
   <app-standings
     *ngSwitchCase="'standings'"
     [loading]="loadingStandings"
+    [userLeagues]="userLeagues"
     [users]="users"
   />
 </ng-container>
