--- a/tipovacka-app/src/styles.scss
+++ b/tipovacka-app/src/styles.scss
@@ -23,7 +23,7 @@
 }
 
 .btn {
-  @apply font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 focus:outline-none flex items-center gap-2;
+  @apply font-medium rounded-lg text-sm px-5 py-2.5 focus:outline-none flex items-center gap-2;
 }
 
 .btn-primary {
@@ -35,7 +35,7 @@
 }
 
 .badge {
-  @apply text-xs mr-2 px-2.5 py-1 rounded;
+  @apply text-xs px-2.5 py-1 rounded;
 }
 
 .input-label {
@@ -68,6 +68,10 @@
 
 .input-description {
   @apply mt-1 text-gray-600 text-xxs;
+}
+
+h2 {
+  @apply font-medium text-xl;
 }
 
 ngneat-dialog {
