chose user league and filter standings by it

--- a/tipovacka-app/src/app/components/choose-user-league/choose-user-league.component.html
+++ b/tipovacka-app/src/app/components/choose-user-league/choose-user-league.component.html
@@ -11,6 +11,20 @@
       {{ userLeague.name }}
       <span class="material-icons">arrow_forward_ios</span>
     </button>
+    <button
+      (click)="chooseUserLeague()"
+      class="btn btn-primary flex justify-between"
+    >
+      {{ 'CHOOSE_USER_LEAGUE.SHOW_ALL' | transloco }}
+      <span class="material-icons">arrow_forward_ios</span>
+    </button>
+    <button
+      (click)="chooseUserLeague()"
+      class="btn btn-primary flex justify-between"
+    >
+      {{ 'CHOOSE_USER_LEAGUE.SHOW_ALL' | transloco }}
+      <span class="material-icons">arrow_forward_ios</span>
+    </button>
   </div>
 </div>
 <div class="flex justify-between">
