--- a/tipovacka-app/src/app/pages/dashboard/dashboard.component.html
+++ b/tipovacka-app/src/app/pages/dashboard/dashboard.component.html
@@ -67,6 +67,7 @@
     [prevMatches]="groupOfPrevMatches"
   />
   <app-standings
+    (userLeagueSelected)="userLeagueSelected($event)"
     *ngSwitchCase="'standings'"
     [loading]="loadingStandings"
     [userLeagues]="userLeagues"
